<resources>
    <string name="app_name">L.I.S.A.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="connexion">Login</string>
    <string name="registration">Register</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="search_endpoint">Searching for L.I.S.A.</string>
    <string name="title_no_end_point">L.I.S.A. not found</string>
    <string name="hint_url">External URL</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="menu_dark_theme">Dark theme</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_add_room">Add room</string>
    <string name="menu_settings">Settings</string>
    <string name="login_error">Login fail, please check your login/password</string>
    <string name="login_link_remote_url"><u>Set external URL to enable remote access</u></string>
    <string name="error_login">Incorrect username or password, please try again</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_email">Your need a correct email address</string>
    <string name="field_external_url">URL for remote access to L.I.S.A.</string>
    <string name="button_save">Save</string>
    <string name="no_device">No device to show</string>
    <string name="field_firstname">First name</string>
    <string name="field_lastname">Last name</string>
    <string name="field_vpassword">Password confirmation</string>
    <string name="field_phone">Phone</string>
    <string name="title_profile">My profile</string>
    <string name="error_password_dont_match">Passwords don\'t match</string>
    <string name="error_field_phone">The phone is in a wrong format</string>
    <string name="pick_avatar">Please select your avatar</string>
    <string name="error_password_lenght">Password should be at least 8 characters long</string>
</resources>
