<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mylisabox.lisa.profile.ProfileActivity">

    <data>

        <variable
            name="viewModel"
            type="com.mylisabox.lisa.profile.ProfileViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/space_small"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:focusable="true"
                android:maxWidth="@dimen/profile_image_size"
                android:onClick="@{() -> viewModel.choosePicture()}"
                android:src="@drawable/ic_lisa_black"
                app:avatar="@{viewModel.avatar}"
                app:layout_constraintBottom_toBottomOf="@+id/field_lastname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedImage="@{viewModel.avatarUrl}"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/field_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:layout_marginStart="@dimen/space_small"
                android:padding="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_picture">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/field_firstname"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.firstName}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_input">

                    <requestFocus/>
                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/field_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_small"
                android:padding="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@id/field_firstname">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/field_lastname"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.lastName}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_input">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_small"
                android:autofillHints="emailAddress"
                android:padding="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_lastname">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/field_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_input"
                    app:error="@{viewModel.emailError}">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/field_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_small"
                android:padding="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_email">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/field_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:text="@={viewModel.phone}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_input"
                    app:error="@{viewModel.phoneError}">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_small"
                android:padding="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_phone">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/field_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_input"
                    app:error="@{viewModel.passwordError}">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/field_vpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginTop="@dimen/space_small"
                android:padding="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_password">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/field_vpassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.verifyPassword}"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_input">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_small"
                android:layout_marginStart="@dimen/space_small"
                android:onClick="@{() -> viewModel.saveProfile()}"
                android:text="@string/button_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_vpassword"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
