<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.mylisabox.lisa.login.LoginViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/semitransparent"
            android:padding="@dimen/space_small">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:drawablePadding="@dimen/space_small"
                android:drawableStart="@drawable/ic_person_24dp"
                android:drawableTint="@color/colorAccent"
                android:focusable="true"
                android:hint="@string/field_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_input"
                app:error="@{viewModel.emailError}">

                <requestFocus/>
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/semitransparent"
            android:padding="@dimen/space_small">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:drawablePadding="@dimen/space_small"
                android:drawableStart="@drawable/ic_lock_outline_24dp"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/field_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_input"
                app:error="@{viewModel.passwordError}"
                app:onImeClicked="@{viewModel}"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:onClick="@{() -> viewModel.goToSettings()}"
            android:text="@string/login_link_remote_url"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_subhead"
            android:textStyle="bold"/>

        <Button
            style="@style/Button.SemiTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_big"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@{viewModel.isRegistrationMode ? @string/registration : @string/connexion}"/>
    </LinearLayout>
</layout>